<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/english_ime_settings"
        android:key="english_ime_settings">

    <PreferenceCategory
            android:title="Keyboard view settings"
            android:key="graphics_settings">

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="settings_height_portrait"
            android:title="Keyboard height, portrait"
            android:persistent="true"
            android:entryValues="@array/keyboard_height_entries"
            android:entries="@array/keyboard_height_entries"
            android:defaultValue="@string/default_height_portrait"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="settings_height_landscape"
            android:title="Keyboard height, landscape"
            android:persistent="true"
            android:entryValues="@array/keyboard_height_entries"
            android:entries="@array/keyboard_height_entries"
            android:defaultValue="@string/default_height_landscape"
            />

    <CheckBoxPreference
            android:key="full_keyboard_in_portrait"
            android:title="@string/title_full_in_portrait"
            android:persistent="true" 
            android:defaultValue="@bool/default_full_in_portrait"
            android:summaryOn="@string/summary_full_in_portrait_true"
            android:summaryOff="@string/summary_full_in_portrait_false"
            />

    <CheckBoxPreference
            android:key="suggestions_in_landscape"
            android:title="@string/title_suggestions_in_landscape"
            android:persistent="true" 
            android:defaultValue="@bool/default_suggestions_in_landscape"
            android:summaryOn="@string/summary_suggestions_in_landscape_true"
            android:summaryOff="@string/summary_suggestions_in_landscape_false"
            />
   
    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_hint_mode"
            android:title="@string/title_hint_mode"
            android:persistent="true"
            android:entryValues="@array/hint_modes_values"
            android:entries="@array/hint_modes"
            android:defaultValue="@string/default_hint_mode"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_label_scale"
            android:title="@string/title_label_scale"
            android:persistent="true"
            android:entryValues="@array/label_scale_values"
            android:entries="@array/label_scale_entries"
            android:defaultValue="1.0"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_keyboard_layout"
            android:title="@string/keyboard_layout"
            android:persistent="true"
            android:entryValues="@array/keyboard_layout_modes_values"
            android:entries="@array/keyboard_layout_modes"
            android:defaultValue="0"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_render_mode"
            android:title="@string/title_render_mode"
            android:persistent="true"
            android:entryValues="@array/render_mode_values"
            android:entries="@array/render_mode_entries"
            android:defaultValue="@string/default_render_mode"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Input mode settings"
            android:key="graphics_settings">

    <CheckBoxPreference
            android:key="recorrection_enabled"
            android:title="@string/prefs_enable_recorrection"
            android:summary="@string/prefs_enable_recorrection_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_recorrection_enabled"
            />

    <CheckBoxPreference
            android:key="fullscreen_override"
            android:title="@string/title_fullscreen_override"
            android:persistent="true" 
            android:defaultValue="@bool/default_fullscreen_override"
            android:summaryOn="@string/summary_fullscreen_override_true"
            android:summaryOff="@string/summary_fullscreen_override_false"
            />

    <CheckBoxPreference
            android:key="force_keyboard_on"
            android:title="@string/title_force_keyboard_on"
            android:persistent="true" 
            android:defaultValue="@bool/default_force_keyboard_on"
            android:summaryOn="@string/summary_force_keyboard_on_true"
            android:summaryOff="@string/summary_force_keyboard_on_false"
            />

    <CheckBoxPreference
            android:key="keyboard_notification"
            android:title="@string/title_keyboard_notification"
            android:persistent="true" 
            android:defaultValue="@bool/default_keyboard_notification"
            android:summaryOn="@string/summary_keyboard_notification_true"
            android:summaryOff="@string/summary_keyboard_notification_false"
            />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Key behavior settings"
            android:key="key_settings">

    <CheckBoxPreference
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:persistent="true"
            android:defaultValue="@bool/default_auto_cap"
            />

    <CheckBoxPreference
            android:key="vibrate_on"
            android:title="@string/vibrate_on_keypress"
            android:persistent="true"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="vibrate_len"
            android:title="@string/title_vibrate_len"
            android:entryValues="@array/vibrate_duration_entries"
            android:entries="@array/vibrate_duration_entries"
            android:persistent="true"
            />

    <CheckBoxPreference
            android:key="sound_on"
            android:title="@string/sound_on_keypress"
            android:persistent="true" 
            />

    <CheckBoxPreference
            android:key="popup_on"
            android:title="@string/popup_on_keypress"
            android:persistent="true"
            android:defaultValue="@bool/default_popup_preview"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_long_press_duration"
            android:title="@string/title_long_press_duration"
            android:persistent="true"
            android:entryValues="@array/long_press_duration_entries"
            android:entries="@array/long_press_duration_entries"
            android:defaultValue="@string/default_long_press_duration"
            />

    <CheckBoxPreference
            android:key="pref_slide_keys"
            android:title="@string/title_slide_keys"
            android:persistent="true" 
            android:defaultValue="false"
            android:summaryOn="@string/summary_slide_keys_true"
            android:summaryOff="@string/summary_slide_keys_false"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Key layout options"
            android:key="layout_settings">

    <ListPreference
            android:key="settings_key"
            android:title="@string/prefs_settings_key"
            android:persistent="true"
            android:entryValues="@array/settings_key_modes_values"
            android:entries="@array/settings_key_modes"
            android:defaultValue="@string/settings_key_mode_auto"
            />

    <ListPreference
            android:key="voice_mode"
            android:title="@string/voice_input"
            android:persistent="true"
            android:entryValues="@array/voice_input_modes_values"
            android:entries="@array/voice_input_modes"
            android:defaultValue="@string/voice_mode_main"
            />

    <PreferenceScreen
            android:title="@string/language_selection_title"
            android:summary="@string/language_selection_summary">
        <intent
                android:action="org.pocketworkstation.pckeyboard.INPUT_LANGUAGE_SELECTION"/>
    </PreferenceScreen>

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/prediction_category"
            android:key="prediction_settings">

        <CheckBoxPreference
            android:key="quick_fixes"
            android:title="@string/quick_fixes"
            android:summary="@string/quick_fixes_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_quick_fixes"
            />

        <CheckBoxPreference
            android:key="show_suggestions"
            android:title="@string/show_suggestions"
            android:summary="@string/show_suggestions_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_suggestions"
            />

        <CheckBoxPreference
            android:key="auto_complete"
            android:title="@string/auto_complete"
            android:summary="@string/auto_complete_summary"
            android:persistent="true" 
            android:defaultValue="@bool/enable_autocorrect"
            android:dependency="show_suggestions"
            />
    </PreferenceCategory>            

    <PreferenceCategory
            android:title="@string/title_application_category"
            android:key="application_settings">

        <CheckBoxPreference
            android:key="connectbot_tab_hack"
            android:title="@string/title_connectbot_tab_hack"
            android:persistent="true" 
            android:defaultValue="true"
            android:summaryOn="@string/summary_connectbot_tab_hack_true"
            android:summaryOff="@string/summary_connectbot_tab_hack_false"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="Swipe gestures (experimental)"
            android:key="swipe_actions">

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_swipe_up"
            android:title="@string/title_swipe_up"
            android:persistent="true"
            android:entryValues="@array/swipe_action_values"
            android:entries="@array/swipe_action_entries"
            android:defaultValue="@string/default_swipe_up"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_swipe_down"
            android:title="@string/title_swipe_down"
            android:persistent="true"
            android:entryValues="@array/swipe_action_values"
            android:entries="@array/swipe_action_entries"
            android:defaultValue="@string/default_swipe_down"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_swipe_left"
            android:title="@string/title_swipe_left"
            android:persistent="true"
            android:entryValues="@array/swipe_action_values"
            android:entries="@array/swipe_action_entries"
            android:defaultValue="@string/default_swipe_left"
            />

    <org.pocketworkstation.pckeyboard.AutoSummaryListPreference
            android:key="pref_swipe_right"
            android:title="@string/title_swipe_right"
            android:persistent="true"
            android:entryValues="@array/swipe_action_values"
            android:entries="@array/swipe_action_entries"
            android:defaultValue="@string/default_swipe_right"
            />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Debugging"
            android:key="debugging">

    <CheckBoxPreference
            android:key="pref_touch_pos"
            android:title="@string/title_touch_pos"
            android:persistent="true" 
            android:defaultValue="false"
            android:summaryOn="@string/summary_touch_pos_true"
            android:summaryOff="@string/summary_touch_pos_false"
            />

    <Preference
            android:key="input_connection_info"
            android:title="Input connection details"
            />

    <Preference
            android:key="label_version"
            android:title="Version"
            android:summary="@string/auto_version"
            />
    </PreferenceCategory>

</PreferenceScreen>
